--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "omdaDownload:build:production",
+            "firebaseProject": "omdadownload-64cc8",
+            "firebaseHostingSite": "omda-download"
+          }
         }
       }
     }
