--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "nv": "git add . && git commit -m \"nv\" && git push && ng deploy"
   },
   "private": true,
   "dependencies": {
